@@ -6,7 +6,7 @@ Syntax::Feature::Sugar::Callbacks - Add sugar for declarative method callbacks
 
 =head1 VERSION
 
-version 0.001
+version 0.002
 
 =head1 SYNOPSIS
 
@@ -83,10 +83,47 @@ classes.
 
 This is the set of callbacks that should be setup. It should be a hash
 reference using callback names as keys and hash references of options as
-values. Possible per-callback options are C<-before> and C<-middle>. The
-C<-before> option is an array reference of parameters that come before the
-invocant. C<-middle> declares parameters going after the invocants, but
-before the parameters specified in the signature.
+values. Possible per-callback options are
+
+=back
+
+=item C<-before>
+
+An array reference of variable names that come before the invocant. A
+typical example would be the original code reference in C<around> method
+modifiers.
+
+=item C<-middle>
+
+An array reference of variable names that come after the invocants, but
+before the parameters specified in the signature. Use this if the code
+reference declared with the construct will receive a constant parameter.
+There is no current way to override this in the signature on a per-construct
+basis.
+
+=item C<-default>
+
+An array reference of variable names that are used when no signature was
+provided. An empty signature will not lead to the defaults being used.
+
+=item C<-stmt>
+
+By default, anonymous constructs will not automatically terminate the
+statement after the code block. If this option is set to a true value, all
+uses of the construct will be terminated.
+
+=item C<-allow_anon>
+
+If set to a true value, anonymous versions of this construct can be
+declared. If no name was specified, only the code reference will be passed
+on to the callback.
+
+=item C<-only_anon>
+
+If set to a true value, a name will not be expected after the keyword and
+before the signature.
+
+=over
 
 =head1 SEE ALSO
 
